# CMake

./: CMakeLists.txt  README.md
include/: test.hpp
lib/: CMakeLists.txt  lib.cpp  lib.hpp
src/: main.cpp
